[package]
name = "pallas-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
bip39 = "2.1.0"
blake2 = "0.10.6"
blockfrost = "1.0.5"
pallas = "0.32.1"
quickcheck = "1.0.3"
rand_core = "0.6.4"
#scrolls = { git = "https://github.com/txpipe/scrolls.git", version = "0.6.0-alpha.0" }
tokio = { version = "1.43.0", features = ["full"] }


[[bin]]
name = "00-wallet"
path = "src/00_wallet/main.rs"
